trying to fix controllers bug

--- a/slider/index.html
+++ b/slider/index.html
@@ -27,6 +27,9 @@
 
         <!-- fonts -->
         <link href='http://fonts.googleapis.com/css?family=Lato:400,900italic,900,700italic,400italic,300italic,300,100italic,100,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Merriweather:400,900italic,900,700italic,400italic,700,300,300italic' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
 
@@ -35,13 +38,12 @@
         <script src='js/app.js' type='text/javascript'></script>
         <script src='js/factory.js' type='text/javascript'></script>
         <script src='js/templates.js' type='text/javascript'></script>
-        <script src='js/_specimenController.js' type='text/javascript'></script>
-        <script src='js/_mastersController.js' type='text/javascript'></script>
-        <script src='js/_adjustmentMastersController.js' type='text/javascript'></script>
-        <script src='js/_designspaceController.js' type='text/javascript'></script>
-        <script src='js/_instancesController.js' type='text/javascript'></script>
-        <script src='js/_parametersController.js' type='text/javascript'></script>     
-        <script src='js/maincontroller.js' type='text/javascript'></script>
+        <script src='js/controllers/specimenController.js' type='text/javascript'></script>
+        <script src='js/controllers/mastersController.js' type='text/javascript'></script>
+        <script src='js/controllers/adjustmentMastersController.js' type='text/javascript'></script>
+        <script src='js/controllers/designspaceController.js' type='text/javascript'></script>
+        <script src='js/controllers/instancesController.js' type='text/javascript'></script>
+        <script src='js/controllers/parametersController.js' type='text/javascript'></script>     
         <script src='js/directives.js' type='text/javascript'></script>
         <script src='js/sortable.js' type='text/javascript'></script>
         <script src='js/functions.js'></script>
