updated masters sketch

--- a/slider/index.html
+++ b/slider/index.html
@@ -112,7 +112,7 @@
                 <div id="panel-3" class="panel">
 
                     <div id="subpanel-3-top" class="sub-panel">
-                        <masters ng-controller="mastersController"></masters>
+                        <masters ng-controller="mastersController" ng-mouseup="mouseclick = false"></masters>
                     </div>
 
                     <div id="subpanel-3-bottom" class="sub-panel">
