--- a/slider/index.html
+++ b/slider/index.html
@@ -38,12 +38,15 @@
         <script src='js/app.js' type='text/javascript'></script>
         <script src='js/factory.js' type='text/javascript'></script>
         <script src='js/templates.js' type='text/javascript'></script>
+        <script src='js/controllers/menuController.js' type='text/javascript'></script>
+        <script src='js/controllers/parametersController.js' type='text/javascript'></script> 
         <script src='js/controllers/specimenController.js' type='text/javascript'></script>
         <script src='js/controllers/mastersController.js' type='text/javascript'></script>
         <script src='js/controllers/adjustmentMastersController.js' type='text/javascript'></script>
         <script src='js/controllers/designspaceController.js' type='text/javascript'></script>
         <script src='js/controllers/instancesController.js' type='text/javascript'></script>
-        <script src='js/controllers/parametersController.js' type='text/javascript'></script>     
+        <script src='js/controllers/fontmappingController.js' type='text/javascript'></script> 
+        <script src='js/controllers/metadataController.js' type='text/javascript'></script> 
         <script src='js/directives.js' type='text/javascript'></script>
         <script src='js/sortable.js' type='text/javascript'></script>
         <script src='js/functions.js'></script>
@@ -54,10 +57,10 @@
     </HEAD>
 
     <BODY ng-app="Metapolator">
-        <div id="menu">
+        <div id="menu" ng-controller="menuController">
             <div id="project">
                 <div id="project-dropdown" class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Project</b> {{projectName}} <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Project</b> {{data.projectName}} <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li>
                             <a href="#">New</a>
@@ -104,7 +107,6 @@
 
                 <div id="panel-2" class="panel sub-panel standard-padding">
                     <specimen ng-controller="specimenController"></specimen>
-                    
                 </div>
 
 
@@ -115,9 +117,6 @@
                         <masters ng-controller="mastersController" ng-mouseup="mouseclick = false"></masters>
                     </div>
 
-                    <div id="subpanel-3-bottom" class="sub-panel">
-                        <adjustment-masters ng-controller="adjustmentMastersController"></adjustment-masters>
-                    </div>
 
                     <div class="divider-hor" id="divider-3">
                         <div class="divider-left"></div>
@@ -132,7 +131,6 @@
                     <div id="subpanel-4-bottom" class="sub-panel standard-padding">
                         <specimen ng-controller="specimenController"></specimen>
                     </div>
-                    <!-- end of specimen 2 -->
 
                     <div class="divider-hor" id="divider-4">
                         <div class="divider-left"></div>
@@ -145,11 +143,11 @@
                 </div>
 
                 <div id="panel-6" class="panel sub-panel standard-padding">
-                    <fontmapping></fontmapping>
+                    <fontmapping ng-controller="fontmappingController"></fontmapping>
                 </div>
 
                 <div id="panel-7" class="panel sub-panel standard-padding">
-                    <metadata></metadata>
+                    <metadata ng-controller="metadataController"></metadata>
                 </div>
             </div>
             <!-- end of landscape -->
