--- a/slider/index.html
+++ b/slider/index.html
@@ -26,13 +26,8 @@
         <![endif]-->
 
         <!-- fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Lato:400,900italic,900,700italic,400italic,300italic,300,100italic,100,700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Merriweather:400,900italic,900,700italic,400italic,700,300,300italic' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
-
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,900,300' rel='stylesheet' type='text/css'>
+        
         <!-- Angular -->
         <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js' type='text/javascript'></script>
         <script src='js/app.js' type='text/javascript'></script>
@@ -126,10 +121,6 @@
                     <div id="subpanel-4-bottom" class="sub-panel standard-padding">
                         <specimen ng-controller="specimenController"></specimen>
                     </div>
-
-                    <div class="divider-hor" id="divider-4">
-                        <div class="divider-left"></div>
-                    </div>
                 </div>
 
                 <!-- start of view 3 -->
@@ -149,14 +140,6 @@
 
         </div>
 
-        <!-- dividers -->
-        <div class="divider" id="divider-1">
-            <div class="divider-top"></div>
-        </div>
-
-        <div class="divider" id="divider-2">
-            <div class="divider-top"></div>
-        </div>
         <div id="size-slider-line"></div>
         <!-- end of dividers -->
     </BODY>
