--- a/red-pill-demo/index.html
+++ b/red-pill-demo/index.html
@@ -31,6 +31,8 @@
     <script>
     function checkFirefox() {
       if(navigator.userAgent.toLowerCase().indexOf('firefox') > -1) {
+        alert("This demo works out of the box with the latest version of Firefox\n\nIt can take a minute or two to load, please be patient");
+      } else {
         alert("This demo only works out of the box with the latest version of Firefox\n\nIt can run with Chrome if you start it with \n\nchrome --js-flags=\"--harmony --harmony_proxies\"");
       }
     }
