--- a/app/red-pill.html
+++ b/app/red-pill.html
@@ -10,7 +10,7 @@
     <title>Metapolator Neue: the Red Pill Interface</title>
     <!-- development -->
     <link rel="stylesheet/less" type="text/css" href="/lib/ui/redPill/app.less" />
-    
+
     <script>
     less = {
         env: "development",
@@ -39,6 +39,29 @@
   <body>
     <h1>Metapolator Neue</h1>
     <h3>The Red Pill Interface</h3>
+    <div class="compatibility-info">
+        If this message does not disappear after a short moment:
+        <h2>Your Browser may be incompatible</h2>
+        <p>You can either use a current version of FireFox or Chromium/Google Chrome.</p>
+        <p>In order to run Metapolator in <strong>Chrome</strong>
+        or <strong>Chromium</strong>
+
+        <ol><li>Make sure that <a href="chrome://flags/#enable-javascript-harmony">chrome://flags/#enable-javascript-harmony</a>
+        is <strong>disabled</strong> (it is by default).</li>
+        <li>Close all running instances of Chromium/Chrome.</li>
+        <li>
+        Then start it from the command-line like so:</p>
+        <pre># if the command for your chrome-browser is "chrome"
+$ chrome --js-flags="--harmony --harmony_proxies"
+
+# in a current *ubuntu linux that might be for chromium:
+$ chromium-browser --js-flags="--harmony --harmony_proxies"
+
+# and for chrome
+$ google-chrome-stable --js-flags="--harmony --harmony_proxies"
+</pre>
+</li></ol>
+    </div>
     <red-pill></red-pill>
   </body>
 </html>
