--- a/red-pill-demo/index.html
+++ b/red-pill-demo/index.html
@@ -10,7 +10,7 @@
     <title>Metapolator Neue: the Red Pill Interface</title>
     <!-- development
     <link rel="stylesheet/less" type="text/css" href="/lib/ui/redPill/app.less" />
-    
+
     <script>
     less = {
         env: "development",
@@ -23,25 +23,45 @@
     };
     </script>
     <script src="/lib/bower_components/less.js/dist/less-1.7.0.min.js"></script>
-    <script src="/lib/bower_components/requirejs/require.js" data-main="/lib/redPillMain.js"></script>
+    <script src="/lib/bower_components/requirejs/require.js"></script>
+    <script>
+    require(['/lib/browserConfig.js'], function(){
+        require(['/lib/redPillMain.js']);
+    });
+    </script>
     <!-- end of development -->
     <!-- production -->
+    <script> window.demoMode = true; </script>
     <link rel="stylesheet" type="text/css" href="main.css" />
     <script src="main.js"></script>
-    <script>
-    function checkFirefox() {
-      if(navigator.userAgent.toLowerCase().indexOf('firefox') > -1) {
-        alert("This demo works out of the box with the latest version of Firefox\n\nIt can take a minute or two to load, please be patient");
-      } else {
-        alert("This demo only works out of the box with the latest version of Firefox\n\nIt can run with Chrome if you start it with \n\nchrome --js-flags=\"--harmony --harmony_proxies\"");
-      }
-    }
-    </script>
     <!-- end of production -->
   </head>
-  <body onload="checkFirefox()">
+  <body>
     <h1>Metapolator Neue</h1>
     <h3>The Red Pill Interface</h3>
+    <div class="compatibility-info">
+        If this message does not disappear after a short moment:
+        <h2>Your Browser may be incompatible</h2>
+        <p>You can either use a current version of FireFox or Chromium/Google Chrome.</p>
+        <p>In order to run Metapolator in <strong>Chrome</strong>
+        or <strong>Chromium</strong>
+
+        <ol><li>Make sure that <a href="chrome://flags/#enable-javascript-harmony">chrome://flags/#enable-javascript-harmony</a>
+        is <strong>disabled</strong> (it is by default).</li>
+        <li>Close all running instances of Chromium/Chrome.</li>
+        <li>
+        Then start it from the command-line like so:</p>
+        <pre># if the command for your chrome-browser is "chrome"
+$ chrome --js-flags="--harmony --harmony_proxies"
+
+# in a current *ubuntu linux that might be for chromium:
+$ chromium-browser --js-flags="--harmony --harmony_proxies"
+
+# and for chrome
+$ google-chrome-stable --js-flags="--harmony --harmony_proxies"
+</pre>
+</li></ol>
+    </div>
     <red-pill></red-pill>
   </body>
 </html>
