Added fonts section

--- a/home/index.html
+++ b/home/index.html
@@ -37,6 +37,7 @@
                     <li><a href="#" data-scroll="redpill">Red Pill</a></li>
                     <li><a href="#" data-scroll="bluepill">Blue Pill</a></li>
                     <li><a href="#" data-scroll="pendrawing">Pen drawing</a></li>
+                    <li><a href="#" data-scroll="fonts">Fonts</a></li>
                     <li><a href="#" data-scroll="followus">Follow us!</a></li>
                 </ul>
             </div>
@@ -93,7 +94,21 @@
                 </div>
             </section>
             
-            <section data-anchor="followus" class="red">
+            <section data-anchor="fonts" class="red">
+                <h1>Fonts designed for and with Metapolator</h1>
+                <div class="bullets">•••</div>
+                <div class="content">
+                    <b>Pre-Metapolating</b><br>Fonts can be prepared for optimal processing with Metapolator. Each glyph be broken up into its individual strokes, and each stroke should have an equal amount of paired points. 
+                    <br><br>
+                    <img src="img/Latin.svg"><br><br>
+                    <b>New Families</b><br>Work Sans, Sean Sans and Breite are being developed as the first true Metapolator font families. 
+                    <br><br>
+                    <img src="img/Font.svg">
+                    <div class="bullets black">•••</div>
+                </div>
+            </section>
+            
+            <section data-anchor="followus">
                 <h1>Follow us!</h1>
                 <div class="bullets">•••</div>
                 <div class="content">
