--- a/home/index.html
+++ b/home/index.html
@@ -34,6 +34,7 @@
             <div id="buttons">
                 <ul>
                     <li><a href="#" data-scroll="introduction">Introduction</a></li>
+                    <li><a href="#" data-scroll="redpill">Red Pill</a></li>
                     <li><a href="#" data-scroll="bluepill">Blue Pill</a></li>
                     <li><a href="#" data-scroll="pendrawing">Pen drawing</a></li>
                     <li><a href="#" data-scroll="installation">Installation</a></li>
