link to red pill and <a> styling

--- a/home/index.html
+++ b/home/index.html
@@ -68,7 +68,8 @@
                 <div class="bullets"></div>
                 <div class="content">
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus imperdiet arcu et nulla scelerisque, vitae venenatis lacus pharetra. Sed quis pulvinar lorem, eget feugiat ipsum. Vivamus sit amet congue velit, sit amet dignissim odio. Vivamus tincidunt fermentum diam non tincidunt. Quisque accumsan nec orci ac ornare. Duis turpis lorem, malesuada sed posuere non, commodo feugiat risus. <br><br>
-                    
+                    <br>
+                    Check out the <a href="http://metapolator.com/red-pill-demo/" target="_blank">Red Pill Demo</a>.
                 </div>
                 <div class="pen-icon"><img src="img/pen-red.png"></div>
             </section>  
