Fix history label

--- a/home/index.html
+++ b/home/index.html
@@ -41,7 +41,7 @@
             <div id="buttons">
                 <ul>
                     <li><a href="#" data-scroll="introduction">Introduction</a></li>
-                    <li><a href="#" data-scroll="redpill">Red Pill</a></li>
+                    <li><a href="#" data-scroll="projecthistory">Project History</a></li>
                     <li><a href="#" data-scroll="bluepill">Blue Pill</a></li>
                     <li><a href="#" data-scroll="pendrawing">Pen drawing</a></li>
                     <li><a href="#" data-scroll="installation">Installation</a></li>
@@ -70,7 +70,7 @@
             
 
             
-            <section data-anchor="redpill">
+            <section data-anchor="projecthistory">
                 <h1>Project History</h1>
                 <div class="bullets">•••</div>
                 <div class="content">
