Remove inline bullet chars

--- a/home/index.html
+++ b/home/index.html
@@ -72,7 +72,7 @@
             
             <section data-anchor="projecthistory">
                 <h1>Project History</h1>
-                <div class="bullets">•••</div>
+                <div class="bullets"></div>
                 <div class="content">
                      <p>
                      The Metapolator project is a free, libre, open source project that is developed by a community of designers and developers. 
@@ -117,7 +117,7 @@
             
             <section data-anchor="bluepill" class="red">
                 <h1>Red Pill &amp; Blue Pill</h1>
-                <div class="bullets">•••</div>
+                <div class="bullets"></div>
                 <div class="content">
                      <p>
                      Lasse developed a modest UI for his own use and development, that allows you to edit CPS in a browser and see the results.
