Initial screenshot content

--- a/home/index.html
+++ b/home/index.html
@@ -193,8 +193,13 @@
                 <h1>Screenshots</h1>
                 <div class="bullets"></div>
                 <div class="content">
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus imperdiet arcu et nulla scelerisque, vitae venenatis lacus pharetra. Sed quis pulvinar lorem, eget feugiat ipsum. Vivamus sit amet congue velit, sit amet dignissim odio. Vivamus tincidunt fermentum diam non tincidunt. Quisque accumsan nec orci ac ornare. Duis turpis lorem, malesuada sed posuere non, commodo feugiat risus. <br><br>
-
+                     <img src="https://lh4.googleusercontent.com/-tyzo7UC1vP8/VMtMTB_4m0I/AAAAAAAAP5s/Q7rgl3qI9jQ/w1012-h698/postedit.mov" width="300px"><br><br>
+                     <p>
+                     <a href="https://plus.google.com/+DaveCrossland/posts/dahVFykbWSM">Video introduction to Lasse's workflow</a> (2015-01-28, 2 hours)
+                     </p>
+                     <p>
+                     <a href="https://plus.google.com/+DaveCrossland/posts/dpMQUJtQ9Tf">Video introduction to Simon's workflow</a> (2015-01-27, 30 mins)
+                     </p>
                 </div>
                 <div class="bullets"></div>
             </section>
