Fix red pill link

--- a/home/index.html
+++ b/home/index.html
@@ -125,7 +125,7 @@
                      These names have stuck as codenames, and you can now play around with demos of the two:
                      </p>
                      <p>
-                     <a href="http://metapolator.com/red-pill-demo">Red Pill</a>
+                     Check out the <a href="http://metapolator.com/red-pill-demo" target="_blank">full red pill interface (in a new window)</a>.
                      </p>
                      <br><br>
                 </div>
