Improve blue pill text

--- a/home/index.html
+++ b/home/index.html
@@ -137,7 +137,8 @@
                 <h1>Blue Pill</h1>
                 <div class="bullets"></div>
                 <div class="content" id="blue-pill-content">
-                    This is a snapshot of the Blue Pill status:<br><br><br>
+                    The Blue Pill offers a way to interactively metapolate.
+                    You can explore and control a design space:<br><br><br>
                     <div class="bluepill-left">
                         <masters ng-controller="mastersController" ng-mouseup="mouseclick = false"></masters>
                     </div>
