Add a little more space

--- a/home/index.html
+++ b/home/index.html
@@ -147,7 +147,9 @@
                     </div>
                     
                 </div>
-                <br><br>Check the <a href="http://metapolator.com/slider/" target="_blank">progress of the blue pill</a>.
+                <br><br>
+                <br><br>
+                Check out the <a href="http://metapolator.com/slider/" target="_blank">full blue pill interface (in a new window)</a>.
                 <div class="bullets"></div>
             </section>  
             
