--- a/home/index.html
+++ b/home/index.html
@@ -157,7 +157,7 @@
                 <h1>Pen Drawing</h1>
                 <div class="bullets"></div>
                 <div class="content">
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus imperdiet arcu et nulla scelerisque, vitae venenatis lacus pharetra. Sed quis pulvinar lorem, eget feugiat ipsum. Vivamus sit amet congue velit, sit amet dignissim odio. Vivamus tincidunt fermentum diam non tincidunt. Quisque accumsan nec orci ac ornare. Duis turpis lorem, malesuada sed posuere non, commodo feugiat risus. 
+                    The core of Metapolator is the stroke element, re-implemented from Metafont. 
                     <div id="pen-drawing-container">
                         <canvas class="float-element-1" id="pencanvas" width="400" height="400"></canvas>
                         <iframe class="float-element-2" width="400" height="400" src="https://www.youtube.com/embed/LlvO4n6vd-U" frameborder="0" allowfullscreen></iframe>
