--- a/home/index.html
+++ b/home/index.html
@@ -43,7 +43,7 @@
                     <li><a href="#" data-scroll="introduction">Introduction</a></li>
                     <li><a href="#" data-scroll="projecthistory">Project History</a></li>
                     <li><a href="#" data-scroll="bluepill">Blue Pill</a></li>
-                    <li><a href="#" data-scroll="pendrawing">Pen drawing</a></li>
+                    <li><a href="#" data-scroll="drawing">Drawing</a></li>
                     <li><a href="#" data-scroll="installation">Installation</a></li>
                     <li><a href="#" data-scroll="fonts">Fonts</a></li>
                     <li><a href="#" data-scroll="screenshots">Screenshots</a></li>
@@ -153,11 +153,15 @@
                 <div class="bullets"></div>
             </section>  
             
-            <section data-anchor="pendrawing">
-                <h1>Pen Drawing</h1>
+            <section data-anchor="strokes">
+                <h1>Drawing With Strokes</h1>
                 <div class="bullets"></div>
                 <div class="content">
                     The core of Metapolator is the stroke element, re-implemented from Metafont. 
+                    This uses the Hobby Spline to control a stroke, that is defined by points along a skeleton path.
+                    Each stroke point has a left point and a right point set at an angle and a distance from that parent point.
+                    The parent has a direction angle itself, and a tension value that defines the curvature of the stroke.
+                    Here is a simple interactive demonstration to play with drawing the Metapolator way:
                     <div id="pen-drawing-container">
                         <canvas class="float-element-1" id="pencanvas" width="400" height="400"></canvas>
                         <iframe class="float-element-2" width="400" height="400" src="https://www.youtube.com/embed/LlvO4n6vd-U" frameborder="0" allowfullscreen></iframe>
