repaired sections and scrolls

--- a/home/index.html
+++ b/home/index.html
@@ -42,7 +42,7 @@
                 <ul>
                     <li><a href="#" data-scroll="introduction">Introduction</a></li>
                     <li><a href="#" data-scroll="projecthistory">Project History</a></li>
-                    <li><a href="#" data-scroll="bluepill">Blue Pill</a></li>
+                    <li><a href="#" data-scroll="redpill">Red & Blue Pill</a></li>
                     <li><a href="#" data-scroll="drawing">Drawing</a></li>
                     <li><a href="#" data-scroll="installation">Installation</a></li>
                     <li><a href="#" data-scroll="fonts">Fonts</a></li>
@@ -114,8 +114,8 @@
                 <div class="bullets"></div>
             </section>  
             
-            <section data-anchor="bluepill" class="red">
-                <h1>Red Pill &amp; Blue Pill</h1>
+            <section data-anchor="redpill" class="grey">
+                <h1>Red Pill</h1>
                 <div class="bullets"></div>
                 <div class="content">
                      <p>
@@ -129,10 +129,7 @@
                      <br><br>
                 </div>
                 <br><br>
-                <div class="bullets"></div>
-            </section>  
 
-            <section data-anchor="bluepill" class="grey">
                 <h1>Blue Pill</h1>
                 <div class="bullets"></div>
                 <div class="content" id="blue-pill-content">
@@ -152,7 +149,7 @@
                 <div class="bullets"></div>
             </section>  
             
-            <section data-anchor="strokes">
+            <section data-anchor="drawing">
                 <h1>Drawing With Strokes</h1>
                 <div class="bullets"></div>
                 <div class="content">
