--- a/home/index.html
+++ b/home/index.html
@@ -85,7 +85,7 @@
                 <h1>Screenshots</h1>
                 <div class="bullets"></div>
                 <div class="content">
-                     <img src="https://lh4.googleusercontent.com/-tyzo7UC1vP8/VMtMTB_4m0I/AAAAAAAAP5s/Q7rgl3qI9jQ/w1012-h698/postedit.mov" width="300px"><br><br>
+                     <a href="https://plus.google.com/100858309774292261525/posts/CTx8bUqo6ES"><img src="https://lh4.googleusercontent.com/-tyzo7UC1vP8/VMtMTB_4m0I/AAAAAAAAP5s/Q7rgl3qI9jQ/w1012-h698/postedit.mov" width="400px"></a><br><br>
                      <p>
                      <a href="https://plus.google.com/+DaveCrossland/posts/dahVFykbWSM">Video introduction to Lasse's workflow</a> (2015-01-28, 2 hours)
                      </p>
