--- a/home/index.html
+++ b/home/index.html
@@ -68,16 +68,14 @@
             </section>
 
             <section data-anchor="fonts">
-                <h1>Fonts designed for and with Metapolator</h1>
+                <h1>Fonts Made With Metapolator</h1>
                 <div class="bullets"></div>
                 <div class="content">
-                    <b>Pre-Metapolating</b><br>Fonts can be prepared for optimal processing with Metapolator. Each glyph be broken up into its individual strokes, and each stroke should have an equal amount of paired points. 
-                    <br><br>
-                    <img src="img/Latin.svg"><br><br>
-                    <b>New Families</b><br>Work Sans, Sean Sans and Breite are being developed as the first true Metapolator font families. 
+                    <b>New Families</b><br>
+                    Work Sans, Sean Sans and Breite are being developed as the first true Metapolator font families. 
                     <br><br>
                     <img src="img/Font.svg">
-                    <div class="bullets black"></div>
+                    <div class="bullets"></div>
                 </div>
             </section>
 
@@ -109,6 +107,11 @@
                         <canvas class="float-element-1" id="pencanvas" width="400" height="400"></canvas>
                         <iframe class="float-element-2" width="400" height="400" src="https://www.youtube.com/embed/LlvO4n6vd-U" frameborder="0" allowfullscreen></iframe>
                     </div>
+                    Fonts can be drawn with existing traditional font editors and imported into Metapolator.
+                    For this to work well, each glyph should be broken up into its individual strokes, and each stroke should have an equal amount of paired points. 
+                    Metapolator will convert these into strokes.
+                    <br><br>
+                    <img src="img/Latin.svg"><br><br>
                 </div>
             </section>
 
