Add 2nd screenshot

--- a/home/index.html
+++ b/home/index.html
@@ -83,7 +83,13 @@
                 <h1>Screenshots</h1>
                 <div class="bullets"></div>
                 <div class="content">
-                     <a href="https://plus.google.com/100858309774292261525/posts/CTx8bUqo6ES"><img src="https://lh4.googleusercontent.com/-tyzo7UC1vP8/VMtMTB_4m0I/AAAAAAAAP5s/Q7rgl3qI9jQ/w1012-h698/postedit.mov" width="400px"></a><br><br>
+                     <a href="https://plus.google.com/100858309774292261525/posts/CTx8bUqo6ES">
+                       <img src="img/simon-workflow.gif" width="400px">
+                     </a>
+                     <a href="#" style="padding-left:1em">
+                       <img src="img/red-pill.png" width="400px">
+                     </a>
+                     <br><br>
                      <p>
                      <a href="https://plus.google.com/+DaveCrossland/posts/dahVFykbWSM">Video introduction to Lasse's workflow</a> (2015-01-28, 2 hours)
                      </p>
@@ -97,7 +103,7 @@
             <section data-anchor="drawing">
                 <h1>Drawing With Strokes</h1>
                 <div class="bullets"></div>
-                <div class="content">
+                <div class="content">                    
                     The core of Metapolator is the stroke element, re-implemented from Metafont. 
                     This uses the Hobby Spline to control a stroke, that is defined by points along a skeleton path.
                     Each stroke point has a left point and a right point set at an angle and a distance from that parent point.
