Remove spaces around links (that are visible)
Also update link target of red pill screenshot

--- a/home/index.html
+++ b/home/index.html
@@ -83,12 +83,8 @@
                 <h1>Screenshots</h1>
                 <div class="bullets"></div>
                 <div class="content">
-                     <a href="https://plus.google.com/100858309774292261525/posts/CTx8bUqo6ES">
-                       <img src="img/simon-workflow.gif" width="400px">
-                     </a>
-                     <a href="#" style="padding-left:1em">
-                       <img src="img/red-pill.png" width="400px">
-                     </a>
+                     <a href="https://plus.google.com/100858309774292261525/posts/CTx8bUqo6ES"><img src="img/simon-workflow.gif" width="400px"></a>
+                     <a href="https://plus.google.com/+DaveCrossland/posts/dahVFykbWSM" style="padding-left:1em"><img src="img/red-pill.png" width="400px"></a>
                      <br><br>
                      <p>
                      <a href="https://plus.google.com/+DaveCrossland/posts/dahVFykbWSM">Video introduction to Lasse's workflow</a> (2015-01-28, 2 hours)
